@startuml

class Runner {
    void main()
}
Runner -- FileParser

class FileParser{
    void parseFile(String filePath)
    char[] readFile(String filePath)
}
FileParser -- StatementProcessor

class StatementProcessor{
    void process(Block block)
    void process(JavaScriptUnit jSUnit)
    void process(FunctionDeclarationStatement funcDecStmt)
    void process(TypeDeclarationStatement typeDecStmt)
}
StatementProcessor -- FunctionProcessor
StatementProcessor -- TypeProcessor

class FunctionProcessor{
    void processFunction(FunctionDeclaration funcDec)
}

class TypeProcessor{
    void processType(TypeDeclaration typeDec)
}

@enduml